// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals Health Score Page bar chart props gets x axis props 1`] = `
Object {
  "tickFormatter": [Function],
  "ticks": Array [],
}
`;

exports[`Signals Health Score Page bar chart props renders tooltip content for component weights 1`] = `
"
      Other Bounces are defined as the share of attempted email injections that bounce for a variety
      of miscellaneous technical reasons.
    "
`;

exports[`Signals Health Score Page bar chart props renders tooltip content for health score 1`] = `
<TooltipMetric
  color="#d9363e"
  label="Health Score"
  value="12"
/>
`;

exports[`Signals Health Score Page bar chart props renders tooltip content for hovered component 1`] = `""`;

exports[`Signals Health Score Page bar chart props renders tooltip content for injections 1`] = `
<TooltipMetric
  label="Injections"
  value="1,000"
/>
`;

exports[`Signals Health Score Page bar chart props renders tooltip content for selected component 1`] = `
<TooltipMetric
  label="Engaged Recipients"
  value="0.1235%"
/>
`;

exports[`Signals Health Score Page bar chart props renders y label content for component weights 1`] = `"Engaged Recipients"`;

exports[`Signals Health Score Page renders correctly when recieving data 1`] = `
<SignalsPage
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Back to Health Score Overview",
      "to": "/signals/health-score",
    }
  }
  facet="sending-domain"
  facetId="test.com"
  title="Health Score"
>
  <Panel
    title="Health Score Trends"
  >
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={5}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>
  <OGOnlyWrapper
    as={[Function]}
  >
    <OGOnlyWrapper
      as={[Function]}
      md={7}
      sm={12}
    >
      <Panel
        data-id="health-score-panel"
      >
        <ChartHeader
          title="Health Score"
          tooltipContent="
  This is a predictive score that monitors your email health to identify problems before
  they negatively impact email delivery. This score is informed by message events,
  including bounces, spam trap hits, and engagement across our entire network.
"
        />
        <Panel.Section>
          <BarChart
            disableHover={false}
            gap={0.25}
            height={250}
            hovered="2017-01-05"
            margin={
              Object {
                "bottom": 5,
                "left": 18,
                "right": 8,
                "top": 21,
              }
            }
            onClick={[MockFunction]}
            onMouseOver={[MockFunction]}
            selected="2017-01-01"
            shouldHighlightSelected={true}
            timeSeries={
              Array [
                Object {
                  "date": "2017-01-01",
                  "weights": Array [
                    Object {
                      "weight": 0.5,
                      "weight_type": "Hard Bounces",
                      "weight_value": 0.25,
                    },
                    Object {
                      "weight": -0.5,
                      "weight_type": "eng cohorts: new, 14-day",
                      "weight_value": 0.25,
                    },
                  ],
                },
                Object {
                  "date": "2017-01-02",
                  "weights": Array [
                    Object {
                      "weight": 0.8,
                      "weight_type": "List Quality",
                      "weight_value": 0.25,
                    },
                    Object {
                      "weight": -0.8,
                      "weight_type": "Other bounces",
                      "weight_value": 0.25,
                    },
                  ],
                },
              ]
            }
            tooltipContent={[Function]}
            width="99%"
            xAxisProps={
              Object {
                "tickFormatter": [Function],
                "ticks": Array [],
              }
            }
            xAxisRefLines={
              Array [
                Object {
                  "label": Object {
                    "className": "xDividerLabel",
                    "offset": 14,
                    "position": "top",
                    "value": "New",
                  },
                  "stroke": "#d2d2d7",
                  "strokeWidth": 1,
                  "x": "2019-06-07",
                },
                Object {
                  "label": Object {
                    "className": "xDividerLabel",
                    "position": "top",
                    "value": "Model",
                  },
                  "strokeWidth": 0,
                  "x": "2019-06-07",
                },
              ]
            }
            xKey="date"
            yAxisProps={
              Object {
                "tickFormatter": [Function],
                "ticks": Array [
                  0,
                  0.55,
                  0.8,
                  1,
                ],
              }
            }
            yAxisRefLines={
              Array [
                Object {
                  "stroke": "#067852",
                  "strokeWidth": 1,
                  "y": 0.8,
                },
                Object {
                  "stroke": "#d9363e",
                  "strokeWidth": 1,
                  "y": 0.55,
                },
              ]
            }
            yKey="health_score"
            yRange={
              Array [
                "auto",
                "auto",
              ]
            }
          />
          <ChartHeader
            title="Injections"
            tooltipContent="
  Injections are defined as the total number of messages successfully generated or relayed to SparkPost for delivery.
"
          />
          <BarChart
            gap={0.25}
            height={190}
            hovered="2017-01-05"
            margin={
              Object {
                "bottom": 5,
                "left": 18,
                "right": 8,
                "top": 12,
              }
            }
            onClick={[MockFunction]}
            onMouseOver={[MockFunction]}
            selected="2017-01-01"
            shouldHighlightSelected={true}
            timeSeries={
              Array [
                Object {
                  "date": "2017-01-01",
                  "weights": Array [
                    Object {
                      "weight": 0.5,
                      "weight_type": "Hard Bounces",
                      "weight_value": 0.25,
                    },
                    Object {
                      "weight": -0.5,
                      "weight_type": "eng cohorts: new, 14-day",
                      "weight_value": 0.25,
                    },
                  ],
                },
                Object {
                  "date": "2017-01-02",
                  "weights": Array [
                    Object {
                      "weight": 0.8,
                      "weight_type": "List Quality",
                      "weight_value": 0.25,
                    },
                    Object {
                      "weight": -0.8,
                      "weight_type": "Other bounces",
                      "weight_value": 0.25,
                    },
                  ],
                },
              ]
            }
            tooltipContent={[Function]}
            width="99%"
            xAxisProps={
              Object {
                "tickFormatter": [Function],
                "ticks": Array [],
              }
            }
            xAxisRefLines={Array []}
            xKey="date"
            yAxisProps={
              Object {
                "tickFormatter": [Function],
              }
            }
            yAxisRefLines={Array []}
            yKey="injections"
            yRange={
              Array [
                "auto",
                "auto",
              ]
            }
          />
          <ChartHeader
            title="Hard Bounces Percent"
          />
          <BarChart
            gap={0.25}
            height={190}
            hovered="2017-01-05"
            margin={
              Object {
                "bottom": 5,
                "left": 18,
                "right": 8,
                "top": 12,
              }
            }
            onClick={[MockFunction]}
            onMouseOver={[MockFunction]}
            selected="2017-01-01"
            shouldHighlightSelected={true}
            timeSeries={
              Array [
                Object {
                  "date": "2017-01-01",
                  "weight": 0.5,
                  "weight_type": "Hard Bounces",
                  "weight_value": 0.25,
                },
                Object {
                  "date": "2017-01-02",
                },
              ]
            }
            tooltipContent={[Function]}
            width="99%"
            xAxisProps={
              Object {
                "tickFormatter": [Function],
                "ticks": Array [],
              }
            }
            xAxisRefLines={Array []}
            xKey="date"
            yAxisProps={
              Object {
                "tickFormatter": [Function],
              }
            }
            yAxisRefLines={Array []}
            yDomain={
              Array [
                0,
                "auto",
              ]
            }
            yKey="weight_value"
            yRange={
              Array [
                "auto",
                "auto",
              ]
            }
          />
        </Panel.Section>
      </Panel>
    </OGOnlyWrapper>
    <OGOnlyWrapper
      as={[Function]}
      md={5}
      mdOffset={0}
      sm={12}
    >
      <div
        data-id="health-score-components"
      >
        <Box
          as={[Function]}
        >
          <Box
            as={[Function]}
            md={7}
            xs={12}
          >
            <Box
              as={[Function]}
            >
              <ChartHeader
                date="2017-01-01"
                hideLine={true}
                title="Health Score Components"
                tooltipContent="
  Your email Health Score is comprised of several signals, including bounces, spam trap hits, user
  engagement, and others.
"
              />
              <Panel.Section>
                <DivergingBar
                  barHeight={140}
                  data={
                    Array [
                      Object {
                        "weight": 0.5,
                        "weight_type": "Hard Bounces",
                        "weight_value": 0.25,
                      },
                      Object {
                        "weight": -0.5,
                        "weight_type": "eng cohorts: new, 14-day",
                        "weight_value": 0.25,
                      },
                    ]
                  }
                  negativeFill="#d9363e"
                  onClick={[Function]}
                  positiveFill="#009f6a"
                  selected="Hard Bounces"
                  tooltipContent={[Function]}
                  width="99%"
                  xDomain={
                    Array [
                      "dataMin",
                      "dataMax",
                    ]
                  }
                  xKey="weight"
                  yKey="weight_type"
                  yLabel={[Function]}
                />
              </Panel.Section>
            </Box>
          </Box>
          <Box
            as={[Function]}
            md={5}
            xs={12}
          >
            <Box
              as={[Function]}
            >
              <HealthScoreActions
                date="2017-01-01"
                weights={
                  Array [
                    Object {
                      "weight": 0.5,
                      "weight_type": "Hard Bounces",
                      "weight_value": 0.25,
                    },
                    Object {
                      "weight": -0.5,
                      "weight_type": "eng cohorts: new, 14-day",
                      "weight_value": 0.25,
                    },
                  ]
                }
              />
            </Box>
          </Box>
        </Box>
      </div>
    </OGOnlyWrapper>
  </OGOnlyWrapper>
</SignalsPage>
`;

exports[`Signals Health Score Page renders empty correctly 1`] = `
Array [
  <Panel
    title="Health Score Trends"
  >
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={5}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>,
  <Panel
    data-id="health-score-panel"
  >
    <ChartHeader
      title="Health Score"
      tooltipContent="
  This is a predictive score that monitors your email health to identify problems before
  they negatively impact email delivery. This score is informed by message events,
  including bounces, spam trap hits, and engagement across our entire network.
"
    />
    <Empty
      message="Insufficient data to populate this chart"
    />
  </Panel>,
]
`;

exports[`Signals Health Score Page renders empty weights 1`] = `
<SignalsPage
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Back to Health Score Overview",
      "to": "/signals/health-score",
    }
  }
  facet="sending-domain"
  facetId="test.com"
  title="Health Score"
>
  <Panel
    title="Health Score Trends"
  >
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={5}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>
  <OGOnlyWrapper
    as={[Function]}
  >
    <OGOnlyWrapper
      as={[Function]}
      md={7}
      sm={12}
    >
      <Panel
        data-id="health-score-panel"
      >
        <ChartHeader
          title="Health Score"
          tooltipContent="
  This is a predictive score that monitors your email health to identify problems before
  they negatively impact email delivery. This score is informed by message events,
  including bounces, spam trap hits, and engagement across our entire network.
"
        />
        <Panel.Section>
          <BarChart
            disableHover={false}
            gap={0.25}
            height={250}
            hovered="2017-01-05"
            margin={
              Object {
                "bottom": 5,
                "left": 18,
                "right": 8,
                "top": 21,
              }
            }
            onClick={[MockFunction]}
            onMouseOver={[MockFunction]}
            selected="2017-01-01"
            shouldHighlightSelected={true}
            timeSeries={
              Array [
                Object {
                  "date": "2017-01-01",
                },
              ]
            }
            tooltipContent={[Function]}
            width="99%"
            xAxisProps={
              Object {
                "tickFormatter": [Function],
                "ticks": Array [],
              }
            }
            xAxisRefLines={
              Array [
                Object {
                  "label": Object {
                    "className": "xDividerLabel",
                    "offset": 14,
                    "position": "top",
                    "value": "New",
                  },
                  "stroke": "#d2d2d7",
                  "strokeWidth": 1,
                  "x": "2019-06-07",
                },
                Object {
                  "label": Object {
                    "className": "xDividerLabel",
                    "position": "top",
                    "value": "Model",
                  },
                  "strokeWidth": 0,
                  "x": "2019-06-07",
                },
              ]
            }
            xKey="date"
            yAxisProps={
              Object {
                "tickFormatter": [Function],
                "ticks": Array [
                  0,
                  0.55,
                  0.8,
                  1,
                ],
              }
            }
            yAxisRefLines={
              Array [
                Object {
                  "stroke": "#067852",
                  "strokeWidth": 1,
                  "y": 0.8,
                },
                Object {
                  "stroke": "#d9363e",
                  "strokeWidth": 1,
                  "y": 0.55,
                },
              ]
            }
            yKey="health_score"
            yRange={
              Array [
                "auto",
                "auto",
              ]
            }
          />
          <ChartHeader
            title="Injections"
            tooltipContent="
  Injections are defined as the total number of messages successfully generated or relayed to SparkPost for delivery.
"
          />
          <BarChart
            gap={0.25}
            height={190}
            hovered="2017-01-05"
            margin={
              Object {
                "bottom": 5,
                "left": 18,
                "right": 8,
                "top": 12,
              }
            }
            onClick={[MockFunction]}
            onMouseOver={[MockFunction]}
            selected="2017-01-01"
            shouldHighlightSelected={true}
            timeSeries={
              Array [
                Object {
                  "date": "2017-01-01",
                },
              ]
            }
            tooltipContent={[Function]}
            width="99%"
            xAxisProps={
              Object {
                "tickFormatter": [Function],
                "ticks": Array [],
              }
            }
            xAxisRefLines={Array []}
            xKey="date"
            yAxisProps={
              Object {
                "tickFormatter": [Function],
              }
            }
            yAxisRefLines={Array []}
            yKey="injections"
            yRange={
              Array [
                "auto",
                "auto",
              ]
            }
          />
        </Panel.Section>
      </Panel>
    </OGOnlyWrapper>
    <OGOnlyWrapper
      as={[Function]}
      md={5}
      mdOffset={0}
      sm={12}
    >
      <div
        data-id="health-score-components"
      >
        <Box
          as={[Function]}
        >
          <Box
            as={[Function]}
            md={7}
            xs={12}
          >
            <Box
              as={[Function]}
            >
              <ChartHeader
                date="2017-01-01"
                hideLine={true}
                title="Health Score Components"
                tooltipContent="
  Your email Health Score is comprised of several signals, including bounces, spam trap hits, user
  engagement, and others.
"
              />
              <Empty
                message="Insufficient data to populate this chart"
              />
            </Box>
          </Box>
          <Box
            as={[Function]}
            md={5}
            xs={12}
          >
            <Box
              as={[Function]}
            >
              <HealthScoreActions
                date="2017-01-01"
                weights={Array []}
              />
            </Box>
          </Box>
        </Box>
      </div>
    </OGOnlyWrapper>
  </OGOnlyWrapper>
</SignalsPage>
`;

exports[`Signals Health Score Page renders error correctly 1`] = `
<SignalsPage
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Back to Health Score Overview",
      "to": "/signals/health-score",
    }
  }
  facet="sending-domain"
  facetId="test.com"
  title="Health Score"
>
  <Panel
    title="Health Score Trends"
  >
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={5}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>
  <OGOnlyWrapper
    as={[Function]}
  >
    <OGOnlyWrapper
      as={[Function]}
      md={7}
      sm={12}
    >
      <Panel
        data-id="health-score-panel"
      >
        <ChartHeader
          title="Health Score"
          tooltipContent="
  This is a predictive score that monitors your email health to identify problems before
  they negatively impact email delivery. This score is informed by message events,
  including bounces, spam trap hits, and engagement across our entire network.
"
        />
        <Empty
          message="Unable to Load Data"
        />
      </Panel>
    </OGOnlyWrapper>
    <OGOnlyWrapper
      as={[Function]}
      md={5}
      mdOffset={0}
      sm={12}
    >
      <div
        data-id="health-score-components"
      >
        <Box
          as={[Function]}
        >
          <Box
            as={[Function]}
            md={7}
            xs={12}
          >
            <Box
              as={[Function]}
            >
              <ChartHeader
                date="2017-01-01"
                hideLine={true}
                title="Health Score Components"
                tooltipContent="
  Your email Health Score is comprised of several signals, including bounces, spam trap hits, user
  engagement, and others.
"
              />
            </Box>
          </Box>
          <Box
            as={[Function]}
            md={5}
            xs={12}
          />
        </Box>
      </div>
    </OGOnlyWrapper>
  </OGOnlyWrapper>
</SignalsPage>
`;

exports[`Signals Health Score Page renders loading correctly 1`] = `
Array [
  <Panel
    title="Health Score Trends"
  >
    <Panel.Section>
      <Grid>
        <Grid.Column
          md={5}
          xs={12}
        >
          <Connect(DateFilter)
            label="Date Range"
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
  </Panel>,
  <Panel
    data-id="health-score-panel"
  >
    <ChartHeader
      title="Health Score"
      tooltipContent="
  This is a predictive score that monitors your email health to identify problems before
  they negatively impact email delivery. This score is informed by message events,
  including bounces, spam trap hits, and engagement across our entire network.
"
    />
    <PanelSectionLoading
      minHeight="225px"
    />
  </Panel>,
]
`;
